--- a/SongSystem/Views/SongForPlaylists/Index.cshtml
+++ b/SongSystem/Views/SongForPlaylists/Index.cshtml
@@ -9,11 +9,11 @@
 
 
 <p>
-    <a asp-action = "Create">Create New</a>
+    <a asp-action = "Create">Add a song to a playlist</a>
 </p>
 
 <table class="table">
-    <thead>
+    <thead style="background-color:aliceblue">
         @*<tr>
                 <th>
                     @Html.DisplayNameFor(model => model.SongDetails)
@@ -29,15 +29,16 @@
 
                 <th></th>
             </tr>*@
+
         <tr>
             <th>Song name (Id)</th>
             <th></th>
             <th>Playlist name (Id)</th>
+            <th></th>
         </tr>
 
     </thead>
     <tbody>
-
 
         @foreach (var item in Model)
         {
