--- a/SongSystem/Views/PlaylistDetails/Index.cshtml
+++ b/SongSystem/Views/PlaylistDetails/Index.cshtml
@@ -7,7 +7,7 @@
 <h1> Playlists</h1>
 
 <p>
-    <a asp-action="Create">New playlist</a>
+    <a asp-action="Create" class="btn btn-primary">New playlist</a>
 </p>
 
 <table class="table">
