--- a/SongSystem/Views/PlaylistDetails/newOrnot.cshtml
+++ b/SongSystem/Views/PlaylistDetails/newOrnot.cshtml
@@ -6,7 +6,7 @@
 
 <h2>A new or already excisting song?</h2>
 
-<a asp-action="newSong" >New</a>
+<a asp-action="newSong" asp-route-id = "@ViewBag.theId" >New</a>
 
 <br />
 <br />
